sort.basic.gnome.AlgGnomeSort.scala.error
Compilation error:
AlgGnomeSort:6: error: type mismatch;
 found   : Unit
 required: Int
    position = gnomeLook(position);
                        ^AlgGnomeSort:8: warning: a pure expression does nothing in statement position; you may be omitting necessary parentheses
  return 0;
         ^AlgGnomeSort:8: warning: enclosing method gnomeSort has result type Unit: return value discarded
  return 0;
  ^AlgGnomeSort:16: warning: enclosing method gnomeLook has result type Unit: return value discarded
    return pos+1;
    ^AlgGnomeSort:20: warning: enclosing method gnomeLook has result type Unit: return value discarded
      return pos+1;
      ^AlgGnomeSort:22: warning: enclosing method gnomeLook has result type Unit: return value discarded
      return pos-1;
      ^